--- a/style.css
+++ b/style.css
@@ -47,7 +47,14 @@ li{
     'wght' 200,
     'GRAD' 200,
     'opsz' 48
-  }
+}
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
 /* --------------------------- */
 
 .main-container{
@@ -1029,22 +1036,255 @@ main .container{
     padding-bottom: 5px;
 }
 .cat-table{
-    margin-top: 2px;
+    margin-top: 5px;
     display:flex;
     flex-direction: column;
 }
+
+.cat-table strong{
+    font-size: 15px;
+}
+
 .cat-table h6{
+    letter-spacing: 0.5px;
     font-size: 14px;
     font-weight: 500;
+    font-family:'open sans' , sans-serif;
 }
 .cat-table div{
     border-bottom: 1px solid #ebeae9;
     display: flex;
-    font-family:'open sans' , sans-serif;
     justify-content: space-between;
-    padding: 10px 0;
+    /* padding: 10px 0; */
+    padding-bottom: 9px;
+    padding-top: 10px;
 }
 .cat-table div:nth-child(5){
     border-bottom: 0;
 }
+.cat-table div:nth-child(1){
+    padding-bottom: 10px;
+}
+.cat-table div:nth-child(2){
+    /* padding-bottom: 11px; */
+    padding-top: 11px;
+    padding-left: 2px               ;
+}
+.cat-table div:nth-child(3){
+    /* padding-bottom: 10px; */
+}
+.cat-table div:nth-child(4){
+    /* padding-bottom: 10px; */
+}
+.subscribe{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    margin-top: 32px;
+
+}
+.subscribe h4{
+    border-bottom: 1px solid #aec3ff;
+    letter-spacing: 0.5px;
+    font-size: 18px;
+    color: #303f9f;
+    padding-bottom: 5px;
+    padding-left: 3px;
+
+}
+.subscribe form{
+    padding-top: 3px;
+    display: flex;
+    flex-direction: column;
+}
+.subscribe #Name, .subscribe #email{
+    border: 1px solid #e0e0e0;
+    font-family:'open sans' , sans-serif;
+    letter-spacing: 1px;
+    font-size: 16px;
+    border-radius: 4px;
+    padding: 13px 15px;
+    margin-top: 10px;
+}
+#Name{
+    margin-left: 2px;
+}
+#email{
+    margin-left: 2px;
+}
+.subscribe label:nth-of-type(2){
+    margin-top: 14px;
+}
+.subscribe label{
+    margin-top: 10px;
+}
+.subscribe button{
+    background-color: #303f9f;
+    color: white;
+    width: 270px;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    padding: 13px 0px;
+    margin-left: 2px;
+    border-radius:4px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.or-class{
+    width: 270px;
+    margin-left: auto;
+    height: 100%;
+    /* background-color: #303f9f; */
+    margin-top: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-bottom: 1px solid #757575;
+}
+#or{
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+#or h5{
+
+    position: absolute;
+    background-color: #ffff;
+    font-weight: 500;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: -14px;
+
+}
+.subscribe-social{
+    margin-top: 27px;
+}
+.subscribe-social ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.subscribe-social ul>li{
+    width: 36px;
+    height: 36px;
+    display: flex;
+    border-radius: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #303f9f;
+}
+.subscribe-social a:link, .subscribe-social a:visited{
+    color: white;
+}
+.subscribe-social li:nth-of-type(1){
+    background-color: #3b5999;
+}
+.subscribe-social li:nth-of-type(2){
+    background-color: #55acee;
+}
+.subscribe-social li:nth-of-type(3){
+    background-color: #4c75a3;
+}
+.subscribe-social li:nth-of-type(4){
+    background-color: #ff2e56;
+}
+.subscribe-social li:nth-of-type(5){
+    background-color: #34465d;
+}
+.subscribe-social li:nth-of-type(6){
+    background-color: #ea4c89;
+}
+
+.tab-post-widget{
+    width: 100%;
+    height: auto;
+    display:flex;
+    margin-top: 30px;
+    flex-direction: column;
+}
+.tab-post-widget h4{
+    border-bottom: 1px solid #aec3ff;
+    letter-spacing: 0.5px;
+    font-size: 18px;
+    color: #303f9f;
+    padding-bottom: 5px;
+    padding-left: 3px;
+}
+.post-heading {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.post-heading button{
+    display: flex;
+    width: 100%;
+    font-size: 10px;
+    height: 40px;
+    margin-top: 15px;
+    border-radius: 5px;
+    border: 1px solid #3f51b5;
+    background: transparent;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    
+}
+#recent{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3f51b5;
+    width: 50%;
+    height: 100%;
+    color: white;
+}
+#popular{
+    color: #3f51b5;
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
+.posts{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
+    gap: 1rem;
+    margin-top: 20px;
+}
+.post-div{
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #303f9f;
+    display: flex;
+   
+}
+.post-bg{
+    background-size: cover;
+    width: 80px;
+    height: 80px;
+}
+.post-1-bg{
+    background-image: url(./images/post-1.png);
+}
+.post-2-bg{
+    background-image: url(./images/post-2.png);
+}
+
+.post-3-bg{
+    background-image: url(./images/post-3.png);
+}
+.post-4-bg{
+    background-image: url(./images/post-4.png);
+}
+
 
